maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: value &&! is not a member of Boolean
	if(dansLeCadre(a,b-1)&&getIndication(a,b-1)==9999 &&!aMurNord(a,b) ){setIndication(a,b-1,getIndication(a,b)+1);indic(a,b-1)}
                                                          ^JediEscaper:12: error: value &&! is not a member of Boolean
	if(dansLeCadre(a-1,b)&&getIndication(a-1,b)==9999 &&!aMurOuest(a,b) ){setIndication(a-1,b,getIndication(a,b)+1);indic(a-1,b)}
                                                          ^JediEscaper:13: error: value &&! is not a member of Boolean
	if(dansLeCadre(a,b-1)&&getIndication(a,b+1)==9999 &&!aMurNord(a,b+1)){setIndication(a,b+1,getIndication(a,b)+1);indic(a,b+1)}
                                                          ^JediEscaper:14: error: value &&! is not a member of Boolean
	if(dansLeCadre(a+1,b)&&getIndication(a+1,b)==9999 &&!aMurOuest(a+1,b)){setIndication(a+1,b,getIndication(a,b)+1);indic(a+1,b)}
                                                          ^